diffusers library tutorial (data+model)

--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -2,15 +2,12 @@ system:
     device: auto
 
 data:
-    path: /Users/akshay/canvas/src/data/dataset/
-    batch_size: 64
+    dataset_name: huggan/smithsonian_butterflies_subset
+    image_size: 128
+    batch_size: 16
 
 model:
-    input_dim: 784
-    hidden_dim: 200
-    output_dim: 10
-    from_pretrained: False
-    weights_path: /Users/akshay/canvas/src/model/weights/
+    image_size: ${data.image_size}
 
 algorithm:
     learning_rate: 1e-3
