--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -1,15 +1,20 @@
-system:
+accelerator:
     device: auto
+    grad_accum: 1
+    mixed_precision: fp16
 
 data:
-    dataset_name: huggan/smithsonian_butterflies_subset
     image_size: 128
     batch_size: 16
 
+
 model:
+    to_compile: False
     image_size: ${data.image_size}
 
 algorithm:
-    learning_rate: 1e-3
-    weight_decay: 1e-6
-    epochs: 5
+    learning_rate: 1e-4
+    lr_warmup_steps: 500
+    num_epochs: 50
+    save_image_epochs: 10
+    eval_batch_size: 16
